Fix: displaying package name on mobile (#104)

--- a/web/assets/css/bundles_list.css
+++ b/web/assets/css/bundles_list.css
@@ -98,7 +98,7 @@
         width: 100%;
     }
 
-    .bundles-list-container h2 {
+    .bundles-list-keyword h2 {
         font-size: 21px;
         color: #fff;
         background: #2a9dc7;
